@@ -4,6 +4,7 @@ NAS4Free 9.1.0.1 - Sandstorm
 Changes:
 - Upgrade to FreeBSD 9.1-RELEASE p4.
 - Improve WebGUI under PHP 5.4/5.5.
+- Refactoring email setup.
 - Add LiveUSB mode as same as LiveCD.
 - Revert to old CHS.
 - Change geometry to CHS=x,255,63 of embedded image.
@@ -159,6 +160,7 @@ Bug fixes:
 - Fix the problem about hastd.conf.
 - Fix File Manager browsing  at /etc directory. (broken rev 573)
 - Fix SSL/TLS usage on email reports.
+- Fix starttls.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
